<resources>
    <string name="app_name">chat All Night</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="first_msg">Explore</string>
    <string name="sec_msg">Meet New Friends</string>
    <string name="third_msg">Love YourSelf</string>
    <string name="fourth_msg">Chat All Night</string>
    <string name="title_activity_login">Login</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="back_login">Already a member? Login</string>
    <string name="title_activity_explenation">Explenation</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="exp1">Contact people from around the World</string>
    <string name="exp2">Save and see your chat History by scroll the chat screen</string>
    <string name="exp3">Shake you Mobile for New info in Chat</string>
    <string name="exp4">Get notification even while playing in other apps  if you keep the app pen in background</string>
    <string name="exp5">Read and Share your Thoughts</string>
    <string name="clear">Clear All Fields</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_manual">Manual</string>
    <string name="send">SEND</string>
    <string name="type_text">type your messege</string>
    <string name="onShake">refresing</string>
    <string name="newMsg1">new messages</string>
    <string name="newMsg2">tap to open</string>
    <string name="regFailed">Register failed</string>
    <string name="noChar">At lease one character</string>

</resources>
